# dpipeline

./: Cargo.toml  README.md  input.csv  output.jsonl
docs/: high-availability-design.md  implementation-plan.md
src/: core.rs  lib.rs  main.rs  pipeline.rs
src/core/: error.rs  record.rs  schema.rs  traits.rs
src/sink/: file.rs
src/source/: file.rs
