[package]
name = "dpipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
csv = "1.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
